# CLA

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
CLA/: address_book.py  address_class.py  birthday.py  email_class.py  loger.py  main.py  name.py  note.py  phone.py  record.py  sanytize.py  sort_folder.py  suggest.py  user_interface.py
Infinity/: address_book.py  address_class.py  birthday.py  email_class.py  main.py  name.py  phone.py  sanytize.py  user_interface.py
